[project]
name = "PUBMED"
version = "0.1.0"
description = "CLI tool to fetch PubMed papers and extract non-academic author metadata(if found)"
authors = [
    {name = "sana"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list="PUBMED.__main__:main"
